<resources>
    <string name="app_name">Ujian Online</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Tekan untuk mendaftar</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Selamat datang di ujian online \nSilahkan log in atau daftar</string>
    <string name="swipe_right_for_login">Tekan untuk Masuk</string>
    <string name="register">Daftar</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>